--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-dom": "15.4.2",
+    "smoothscroll-polyfill": "^0.3.4",
     "styled-components": "^1.4.3"
   },
   "devDependencies": {
