--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blaketarter-2.0",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "react": "15.4.2",
     "react-dom": "15.4.2",
@@ -18,6 +19,7 @@
     "postbuild": "npm run optimize",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "optimize": "node ./node_modules/sw-precache/cli.js --root='build/' --static-file-globs='build/**/!(*map*)'"
+    "optimize": "node ./node_modules/sw-precache/cli.js --root='build/' --static-file-globs='build/**/!(*map*)'",
+    "deploy": "npm run build && GIT_DEPLOY_DIR=build ./deploy.sh"
   }
 }
