--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "random-nodes-canvas": "0.3.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "smoothscroll-polyfill": "^0.3.4",
