--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,21 @@
 name: CI
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: npm install and lint
+      run: |
+        npm install
+        npm run lint
   test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: npm install, test, and build
+    - name: npm install and test
       run: |
         npm install
-        npm run ci
+        npm test
