--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
   build-and-deploy:
     needs: [lint, test, visual]
     runs-on: ubuntu-latest
-    if: github.ref === 'develop'
+    if: github.ref == 'develop'
     steps:
     - uses: actions/checkout@master
     - name: npm install, build, and deploy
