Add if check to debug job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
   debug:
     needs: [lint, test, visual]
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/debug-deploy-action'
     steps:
       - name: debug action
         run: |
